--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -29,12 +29,12 @@ jobs:
       - name: Build Next.js App
         run: npm run build
         
-      # 6. SCP 명령어를 사용하여 EC2 서버에 전송
+      # 6. SCP 명령어를 사용하여 서버에 Next.js 프로젝트 전송
       - name: Deploy
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}  # SCP로 전송할 서버 호스트 이름
           username: ${{ secrets.SERVER_USERNAME }}  # SCP로 전송할 서버 사용자 이름
           key: ${{ secrets.SERVER_PEM_KEY }}  # SCP로 전송할 서버 비밀번호
-          source: .next/  # 전송할 파일 경로
+          source: /  # 전송할 파일 경로
           target: ${{ secrets.SERVER_TARGET }}  # 전송 대상 경로
