--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -10,31 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # 1. 레포지토리 체크아웃
-      - name: Checkout
-        uses: actions/checkout@v3
-      
-      # 2. Node.js를 설치
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-          
-      # 3. NPM 패키지를 설치
-      - name: Install Dependencies
-        run: npm install
-        
-      # 4. 환경변수 .env 관련 적용
-      # - name: Generate Environment Variables File for Production
-    
-      # 5. Next.js 프로젝트를 빌드
-      - name: Build Next.js App
-        run: npm run build
-        
-      # 6. SCP 명령어를 사용하여 서버에 Next.js 프로젝트 전송
-      - name: Deploy
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}  # SCP로 전송할 서버 호스트 이름
-          username: ${{ secrets.SERVER_USERNAME }}  # SCP로 전송할 서버 사용자 이름
-          key: ${{ secrets.SERVER_PEM_KEY }}  # SCP로 전송할 서버 비밀번호
-          source: ./  # 전송할 파일 경로
-          target: ${{ secrets.SERVER_TARGET }}  # 전송 대상 경로
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        key: ${{ secrets.SERVER_PEM_KEY }}
+        password: ${{ secrets.SERVER_PASSWORD }}
+        script: ${{ secrets.SCRIPT }}
