빌드 및 배포 수정
- git actions 수정

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -20,7 +20,7 @@ jobs:
         script: |
             su
             ${{ secrets.SERVER_PASSWORD }}
-            cd ${{ SERVER_TARGET }}
+            cd ${{ secrets.SERVER_TARGET }}
             git pull
             npm install
             npm run build
