--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,17 +8,55 @@ on:
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-latest
-    steps:
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_PEM_KEY }}
-        script: |
-            cd /home/quizmon/quizmon-fe
-            git pull
-            npm install
-            npm run build
-            pm2 reload quizmon-fe
+      runs-on: ubuntu-latest
+      steps:
+        # 0. 기존 .next 프로젝트 폴더 삭제
+        - name: First SSH Command
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.SERVER_HOST }}
+            username: ${{ secrets.SERVER_USERNAME }}
+            key: ${{ secrets.SERVER_PEM_KEY }}
+            envs: SERVER_TARGET
+            script: |
+                cd $SERVER_TARGET
+                rm -rf .next
+      
+        # 1. 레파지토리 체크아웃
+        - name: Checkout
+          uses: actions/checkout@v3
+
+        # 2. Node.js 설치
+        - name: Install Node.js
+          uses: actions/setup-node@v3
+
+        # 3. NPM 패키지 설치
+        - name: Install Dependencies
+          run: npm install
+
+        # 5. Next.js 프로젝트 빌드
+        - name: Build Next.js App
+          run: npm run build
+
+        # 6. SCP 명령어를 이용해 서버에 .next 전송
+        - name: Deploy
+          uses: appleboy/scp-action@master
+          with:
+            host: ${{ secrets.SERVER_HOST }}  # SCP로 전송할 서버 호스트 이름
+            username: ${{ secrets.SERVER_USERNAME }}  # SCP로 전송할 서버 사용자 이름
+            key: ${{ secrets.SERVER_PEM_KEY }}  # SCP로 전송할 서버 비밀번호
+            source: .next/  # 전송할 폴더 경로
+            target: ${{ secrets.SERVER_TARGET }}  # 전송 대상 경로
+        
+        # 7. Next.js 프로젝트 Git Pull 실행 후 프로세스 재시작
+        - name: Last SSH Command
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.SERVER_HOST }}
+            username: ${{ secrets.SERVER_USERNAME }}
+            key: ${{ secrets.SERVER_PEM_KEY }}
+            script: |
+                cd $SERVER_TARGET
+                git pull
+                npm install
+                pm2 reload quizmon-fe
