빌드 및 배포 수정
- git actions 수정

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -20,7 +20,7 @@ jobs:
             key: ${{ secrets.SERVER_PEM_KEY }}
             envs: SERVER_TARGET
             script: |
-                cd "$SERVER_TARGET"
+                cd /home/quizmon/quizmon-fe
                 rm -rf .next
       
         # 1. 레파지토리 체크아웃
@@ -59,7 +59,7 @@ jobs:
             key: ${{ secrets.SERVER_PEM_KEY }}
             envs: SERVER_TARGET
             script: |
-                cd "$SERVER_TARGET"
+                cd /home/quizmon/quizmon-fe
                 git pull
                 npm install
                 pm2 reload quizmon-fe
